// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes/Settings.tsx Footer section app version should show development app version 1`] = `
<span
  title="app-version"
>
  Gitify 
  dev
</span>
`;

exports[`routes/Settings.tsx Footer section app version should show production app version 1`] = `
<span
  title="app-version"
>
  Gitify 
  v0.0.1
</span>
`;

exports[`routes/Settings.tsx General should render itself & its children 1`] = `
<div
  class="flex h-screen flex-col"
  data-testid="settings"
>
  <div
    class="mx-8 mt-4 flex items-center justify-between py-2"
  >
    <button
      class="focus:outline-none"
      title="Go Back"
      type="button"
    >
      <svg
        aria-label="Go Back"
        class="hover:text-gray-400"
        fill="currentColor"
        focusable="false"
        height="20"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
        viewBox="0 0 16 16"
        width="20"
      >
        <path
          d="M7.78 12.53a.75.75 0 0 1-1.06 0L2.47 8.28a.75.75 0 0 1 0-1.06l4.25-4.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042L4.81 7h7.44a.75.75 0 0 1 0 1.5H4.81l2.97 2.97a.75.75 0 0 1 0 1.06Z"
        />
      </svg>
    </button>
    <h3
      class="text-lg font-semibold"
    >
      Settings
    </h3>
  </div>
  <div
    class="flex-grow overflow-x-auto px-8"
  >
    <fieldset
      class="mb-3"
    >
      <legend
        class="mb-1 mt-2 font-semibold"
        id="appearance"
      >
        Appearance
      </legend>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="mr-3 py-1"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="theme"
            >
              Theme:
            </label>
          </div>
          <div
            aria-labelledby="theme"
            class="flex items-center space-x-4"
            role="group"
          >
            <div
              class="mt-1 flex"
            >
              <input
                checked=""
                class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500"
                id="theme_system"
                name="theme"
                type="radio"
                value="SYSTEM"
              />
              <label
                class="ml-3 block text-sm font-medium text-gray-700 dark:text-white"
                for="theme_system"
              >
                System
              </label>
            </div>
            <div
              class="mt-1 flex"
            >
              <input
                class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500"
                id="theme_light"
                name="theme"
                type="radio"
                value="LIGHT"
              />
              <label
                class="ml-3 block text-sm font-medium text-gray-700 dark:text-white"
                for="theme_light"
              >
                Light
              </label>
            </div>
            <div
              class="mt-1 flex"
            >
              <input
                class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500"
                id="theme_dark"
                name="theme"
                type="radio"
                value="DARK"
              />
              <label
                class="ml-3 block text-sm font-medium text-gray-700 dark:text-white"
                for="theme_dark"
              >
                Dark
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              checked=""
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="detailedNotifications"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="detailedNotifications"
            >
              Detailed notifications
              <span
                aria-label="tooltip-detailedNotifications"
                class="relative"
                id="tooltip-detailedNotifications"
              >
                <svg
                  aria-hidden="true"
                  class="ml-1 text-blue-500"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              checked=""
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="showPills"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showPills"
            >
              Show notification metric pills
              <span
                aria-label="tooltip-showPills"
                class="relative"
                id="tooltip-showPills"
              >
                <svg
                  aria-hidden="true"
                  class="ml-1 text-blue-500"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="showAccountHostname"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showAccountHostname"
            >
              Show account hostname
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="mb-3"
    >
      <legend
        class="mb-1 mt-2 font-semibold"
        id="notifications"
      >
        Notifications
      </legend>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="showOnlyParticipating"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showOnlyParticipating"
            >
              Show only participating
              <span
                aria-label="tooltip-showOnlyParticipating"
                class="relative"
                id="tooltip-showOnlyParticipating"
              >
                <svg
                  aria-hidden="true"
                  class="ml-1 text-blue-500"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              checked=""
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="showBots"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showBots"
            >
              Show notifications from Bot accounts
              <span
                aria-label="tooltip-showBots"
                class="relative"
                id="tooltip-showBots"
              >
                <svg
                  aria-hidden="true"
                  class="ml-1 text-blue-500"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="markAsDoneOnOpen"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="markAsDoneOnOpen"
            >
              Mark as done on open
            </label>
          </div>
        </div>
      </div>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="delayNotificationState"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="delayNotificationState"
            >
              Delay notification state
              <span
                aria-label="tooltip-delayNotificationState"
                class="relative"
                id="tooltip-delayNotificationState"
              >
                <svg
                  aria-hidden="true"
                  class="ml-1 text-blue-500"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="mb-3"
    >
      <legend
        class="mb-1 mt-2 font-semibold"
        id="system"
      >
        System
      </legend>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="showNotificationsCountInTray"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showNotificationsCountInTray"
            >
              Show notifications count in tray
            </label>
          </div>
        </div>
      </div>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              checked=""
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="showNotifications"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showNotifications"
            >
              Show system notifications
            </label>
          </div>
        </div>
      </div>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              checked=""
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="playSound"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="playSound"
            >
              Play sound
            </label>
          </div>
        </div>
      </div>
      <div
        class="mb-3 mt-1 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex h-5 items-center"
          >
            <input
              class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
              id="openAtStartUp"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="openAtStartUp"
            >
              Open at startup
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    class="flex items-center justify-between bg-gray-200 px-8 py-1 text-sm dark:bg-gray-darker"
  >
    <button
      class="cursor-pointer font-semibold"
      title="View release notes"
      type="button"
    >
      <span
        title="app-version"
      >
        Gitify 
        v0.0.1
      </span>
    </button>
    <div>
      <button
        class="hover:text-gray-500 py-1 px-2 my-1 mx-2 focus:outline-none"
        title="Accounts"
        type="button"
      >
        <svg
          aria-label="Accounts"
          class="octicon octicon-person"
          fill="currentColor"
          focusable="false"
          height="18"
          role="img"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="18"
        >
          <path
            d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"
          />
        </svg>
      </button>
      <button
        class="hover:text-gray-500 py-1 px-2 my-1 mx-2 focus:outline-none"
        title="Quit Gitify"
        type="button"
      >
        <svg
          aria-label="Quit Gitify"
          class="octicon octicon-x-circle"
          fill="currentColor"
          focusable="false"
          height="18"
          role="img"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="18"
        >
          <path
            d="M2.344 2.343h-.001a8 8 0 0 1 11.314 11.314A8.002 8.002 0 0 1 .234 10.089a8 8 0 0 1 2.11-7.746Zm1.06 10.253a6.5 6.5 0 1 0 9.108-9.275 6.5 6.5 0 0 0-9.108 9.275ZM6.03 4.97 8 6.94l1.97-1.97a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L9.06 8l1.97 1.97a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215L8 9.06l-1.97 1.97a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L6.94 8 4.97 6.03a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`routes/Settings.tsx Notifications section should be able to toggle the showBots checkbox when detailedNotifications is enabled 1`] = `
<div
  class="flex items-start"
>
  <div
    class="flex h-5 items-center"
  >
    <input
      checked=""
      class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
      id="showBots"
      type="checkbox"
    />
  </div>
  <div
    class="ml-3"
  >
    <label
      class="font-medium text-gray-700 dark:text-gray-200"
      for="showBots"
    >
      Show notifications from Bot accounts
      <span
        aria-label="tooltip-showBots"
        class="relative"
        id="tooltip-showBots"
      >
        <svg
          aria-hidden="true"
          class="ml-1 text-blue-500"
          fill="currentColor"
          focusable="false"
          height="16"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
          />
        </svg>
      </span>
    </label>
  </div>
</div>
`;

exports[`routes/Settings.tsx Notifications section should not be able to toggle the showBots checkbox when detailedNotifications is disabled 1`] = `
<div
  class="flex items-start"
>
  <div
    class="flex h-5 items-center"
  >
    <input
      checked=""
      class="size-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
      disabled=""
      id="showBots"
      type="checkbox"
    />
  </div>
  <div
    class="ml-3"
  >
    <label
      class="font-medium text-gray-700 dark:text-gray-200"
      for="showBots"
      style="text-decoration: line-through;"
    >
      Show notifications from Bot accounts
      <span
        aria-label="tooltip-showBots"
        class="relative"
        id="tooltip-showBots"
      >
        <svg
          aria-hidden="true"
          class="ml-1 text-blue-500"
          fill="currentColor"
          focusable="false"
          height="16"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
          />
        </svg>
      </span>
    </label>
  </div>
</div>
`;
